PROJECT(LCMS)

FILE(GLOB LCMS_SRCS *.c *.h )

SET(LIBRARY_OUTPUT_PATH		${SET_LIB_DEST_DIR}	)

#
# for windows add the .def and .rc files to the source list
#
IF(WIN32)
	ADD_DEFINITIONS(-DIL_USE_PRAGMA_LIBS)
	IF(BUILD_SHARED_LIBS)
		ADD_DEFINITIONS(-DLCMS_DLL_BUILD)
		SET(LCMS_SRCS ${LCMS_SRCS} LCMS.def )
	ENDIF(BUILD_SHARED_LIBS)
ENDIF(WIN32)


SOURCE_GROUP(code FILES ${LCMS_SRCS} )

ADD_LIBRARY(DevIL_lcms LCMS_SRCS)
